--- a/src/frontend/src/assets/scss/layout/header.scss
+++ b/src/frontend/src/assets/scss/layout/header.scss
@@ -100,3 +100,27 @@
     color: $white;
   }
 }
+
+.header__login::after,
+.header__logout::before,
+.header__user img {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  vertical-align: middle;
+}
+
+.header__login::after,
+.header__logout::before {
+  content: "";
+  background: url("~@/assets/img/login.svg") no-repeat center;
+  background-size: auto 50%;
+}
+
+.header__logout::before {
+  margin-right: 8px;
+}
+
+.header__login::after {
+  margin-left: 8px;
+}
